feat: add Docker local dev stack, quality engineering, and complete documentation
- Docker Compose with profiles (services/simulator/full), multi-stage Dockerfiles,
  debug ports, scripts (start/stop/reset), application-docker.yml for all services
- Quality: JaCoCo coverage, ArchUnit hexagonal rules, Spotless, Testcontainers
  (PostgreSQL/Kafka/Redis), performance smoke tests, GitHub Actions CI (6 jobs)
- Documentation: 10 new docs (architecture, domain-model, api, iot-protocol,
  security, devops, ml-strategy, pedagogical-guide, production-readiness, local-dev)
- Updated README with launch instructions, access points, and full doc index

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>